--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:spotify": "node scripts/test-spotify.js",
+    "extract:spotify-id": "node scripts/extract-spotify-id.js"
   },
   "dependencies": {
+    "framer-motion": "^11.3.19",
+    "lucide-react": "^0.400.0",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.3.19",
-    "lucide-react": "^0.400.0",
     "react-hook-form": "^7.51.0"
   },
   "devDependencies": {
@@ -21,9 +23,9 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^17.2.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3"
   }
 }
-
